--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.6.1",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "gapi-script": "^1.2.0",
+    "jsonwebtoken": "^9.0.0",
     "multiselect-react-dropdown": "^2.0.25",
+    "pspdfkit": "^2023.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
@@ -22,7 +25,10 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.44.2",
     "react-icons": "^4.8.0",
+    "react-jwt": "^1.1.8",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.7",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
@@ -32,6 +38,9 @@
     "react-youtube": "^10.1.0",
     "styled-components": "^5.3.11",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.11",
+    "sweetalert2-react-content": "^5.0.7",
+    "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
