--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.1.0",
     "@mui/material": "^5.13.2",
     "@reduxjs/toolkit": "^1.9.5",
@@ -14,6 +18,7 @@
     "antd": "^5.6.1",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.1.4",
     "gapi-script": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "multiselect-react-dropdown": "^2.0.25",
@@ -27,6 +32,7 @@
     "react-icons": "^4.8.0",
     "react-jwt": "^1.1.8",
     "react-modal": "^3.16.1",
+    "react-player": "^2.12.0",
     "react-redux": "^8.0.7",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.9.0",
