--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.2.3",
     "dotenv": "^16.1.4",
     "gapi-script": "^1.2.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "multiselect-react-dropdown": "^2.0.25",
     "pspdfkit": "^2023.3.1",
