--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.1.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.13.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -26,6 +28,7 @@
     "pspdfkit": "^2023.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-google-recaptcha": "^3.1.0",
