--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pspdfkit": "^2023.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-calendar": "^4.3.0",
     "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
