--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -12,7 +12,8 @@
     "@hookform/resolvers": "^3.1.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@mui/material": "^5.13.2",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.6",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -26,12 +27,14 @@
     "jsonwebtoken": "^9.0.0",
     "multiselect-react-dropdown": "^2.0.25",
     "pspdfkit": "^2023.3.1",
+    "rasa-webchat": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-google-recaptcha": "^3.1.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.44.2",
     "react-icons": "^4.8.0",
     "react-jwt": "^1.1.8",
