--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "antd": "^5.6.1",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.1.4",
     "gapi-script": "^1.2.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "multiselect-react-dropdown": "^2.0.25",
     "pspdfkit": "^2023.3.1",
     "rasa-webchat": "^1.0.1",
