--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-simple-star-rating": "^5.1.7",
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.1",
     "react-toastify": "^9.1.3",
