--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.44.2",
     "react-icons": "^4.8.0",
     "react-jwt": "^1.1.8",
+    "react-loading-indicator": "^1.0.2",
     "react-modal": "^3.16.1",
     "react-player": "^2.12.0",
     "react-redux": "^8.0.7",
