--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-jwt": "^1.1.8",
     "react-loading-indicator": "^1.0.2",
     "react-modal": "^3.16.1",
+    "react-moment": "^1.1.3",
     "react-player": "^2.12.0",
     "react-redux": "^8.0.7",
     "react-responsive-carousel": "^3.2.23",
