--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-player": "^2.12.0",
     "react-redux": "^8.0.7",
     "react-responsive-carousel": "^3.2.23",
+    "react-responsive-pagination": "^2.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
