--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.2.3",
     "date-fns": "^2.30.0",
     "dotenv": "^16.1.4",
+    "file-saver": "^2.0.5",
     "gapi-script": "^1.2.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
@@ -56,6 +57,7 @@
     "react-spring": "^9.7.1",
     "react-toastify": "^9.1.3",
     "react-youtube": "^10.1.0",
+    "sheetjs-style": "^0.15.8",
     "styled-components": "^5.3.11",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.11",
